ansible/playbooks/monitoring/monitoring-ingress.yml
# monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - host: "devops.infra.monitoring.com" # Desired hostname, check if possible
    http:
      paths:
      - path: "/grafana"
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80

  - host: "devops.infra.monitoring.com" # Desired hostname, check if possible
    http:
      paths:
      - path: "/prometheus"
        pathType: Prefix
        backend:
          service:
            name: prometheus-prometheus-stack-kube-prom-prometheus
            port:
              number: 80
